--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,139 @@
-
 * {
-  background-color: aliceblue;
+  background-color: rgb(246, 243, 243);
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-
-.search__box--btn:hover{
-  background-color: rgb(78, 137, 137);
-}
-.main__content {
-  width: 80%;
-  margin: auto;
-  margin-top: 1rem;
-}
-.main__content .main__content--grid{
+ .image-grid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  
 }
-.main__content .main__content--grid img {
-  width: 100%;
-  max-width: 100%;
+.image-grid img {
+  width: 80%;
+  height: auto;
+  aspect-ratio: 1;
+  object-fit: contain;
+  object-position: center center;
+}
+
+.Header {
+  position: fixed;
+  top: 0;
+  margin-bottom: 30px;
+}
+.input_search {
+  border-radius: 5px;
+  width: 40vw;
+  border: none;
+  outline: none;
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+}
+.input_search:focus {
+  border: 3px solid rgb(49, 250, 250);
+  outline: none;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.537);
+}
+.btn_search {
+  background-color: rgb(86, 185, 227);
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
+  border:none;
+  cursor: pointer;
+}
+.btn_search:hover{
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.5);
+   transition: box-shadow 100ms ease-in-out;
+   background-color: rgb(79, 111, 216);
+}
+.btn_clear {
+  background-color: rgb(250, 105, 103);
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
+  border:none;
+  cursor: pointer;
+}
+.btn_clear:hover{
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.5);
+   transition: box-shadow 100ms ease-in-out;
+   background-color: rgb(255, 89, 86);
+}
+
+.Preview{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0px;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 10px;
+  background: linear-gradient(90deg, rgba(0,0,0,0.95) 1%, rgba(28,27,27,0.9) 96%);
+}
+.Preview img{
+  width: 300px;
+  border-radius: 10px;
+  margin-top: 5px;
+}
+.Preview img:hover{
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+  transition: box-shadow 100ms ease-in-out;
+}
+.Link {
+  color: rgb(31, 187, 222);
+  font-size: 1rem;
+}
+.Download_Btn{
+  padding: 10px 25px;
+  border-radius: 5px;
+  background-color: rgb(96, 204, 103);
+  outline: none;
+  text-decoration: none;
+  font-family: Roboto, Arial;
+  color: white;
+  font-size: 1rem;
+  text-align: center;
+}
+.Close_Btn {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgb(250, 105, 103);
+  outline: none;
+  border-style: inset;
+  color: white;
+  font-size: 1rem;
+  margin-top: 10px;
+  border:none;
+  cursor: pointer;
+}
+.Close_Btn:hover{
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.5);
+   transition: box-shadow 100ms ease-in-out;
+   background-color: rgb(255, 89, 86);
+}
+.Download_Btn:hover{
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.5);
+   transition: box-shadow 100ms ease-in-out;
+   background-color: rgb(140, 204, 91);
+}
+.Paragraph_Card{
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1rem;
+}
+.Images-R {
+  gap: 1rem;
+  margin: 0;
+  transition: 500ms;
   aspect-ratio: 1;
   object-fit: cover;
   object-position: center center;
 }
-.main__content .main__content--grid img:hover {
-    box-shadow: 5px solid black;
+.Images-R:hover {
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.5);
+  filter:contrast(1.2);
+   transition: box-shadow 100ms ease-in-out;
 }
-
-/* .image-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 1rem;
-}
-
-.image-grid img {
-  width: 100%;
-  height: auto;
-} */
